--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Altered Echo</title>
+    <title>Ripple</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="app.js"></script>
     <meta name="color-scheme" content="dark">
