testing scene visting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div id="app">
-        <div id="gamescreen"></div>
+        <div id="gamescreen">
+            <div id="gameWrapper">
+                <div id="dialoguebox"></div>
+                <hr class="divider">
+            </div>
+        </div>
     </div>
 </body>
 </html>
