--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>Ripple</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="app.js"></script>
-    <!-- <meta name="color-scheme" content="dark"> -->
+    <meta name="color-scheme" content="dark">
 </head>
 <body>
     <div id="app">
+        <!-- <div id="titleScreen">
+            <div class="logo"></div>
+            <h1>INTO THE FALLEN KINGDOM</h1>
+        </div> -->
         <div id="gamescreen">
             <div id="gameWrapper">
                 <div id="dialoguebox"></div>
