added mainmenu theme

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div id="app">
         <div id="titleScreen">
 
-            <div id="initialPrompt"></div>
+            <div id="initialPrompt"><p>Click To Play</p></div>
 
-            <div class="logo"></div>
-            <h1>INTO THE FALLEN KINGDOM</h1>
-            <div class="btnContainer">
+            <div class="logo" id="logo"></div>
+            <h1 id="subText">INTO THE FALLEN KINGDOM</h1>
+            <div class="btnContainer" id="mainMenuBtnContainer">
                 <button class="tbtn" id="newGameBtn">New Game</button>
                 <button class="tbtn" id="continueGameBtn">Continue</button>
                 <button class="tbtn" id="endingsBtn">Endings</button>
